--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="60dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:showIn="@layout/activity_main"
     tools:context="com.example.s.sunshinesari.app.MainActivityFragment">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listview_forecast" />
+        android:id="@+id/listview_forecast"
+        android:layout_gravity="center_horizontal|top" />
 
 </FrameLayout>
