--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,9 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="60dp"
+
+    android:paddingTop="54dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.s.sunshinesari.app.MainActivityFragment">
 
@@ -12,6 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listview_forecast"
-        android:layout_gravity="center_horizontal|top" />
+        android:layout_gravity="center" />
 
 </FrameLayout>
